Add icons in oojs export menu
ERM32853

[4.3.x]

Change-Id: Ie69e00a1b7e370e282d4905c081e2795c20d9fe0

--- a/resources/bluespice.exportTables.less
+++ b/resources/bluespice.exportTables.less
@@ -8,17 +8,31 @@
 	padding-bottom: 0.5em;
 }
 
-.icon-csv {
+.icon-csv,
+.oo-ui-icon-csv {
 	/*@embed*/
 	background-image: url('images/table.png');
+	opacity: 1;
 }
 
-.icon-xls {
+.icon-xls,
+.oo-ui-icon-xls {
 	/*@embed*/
 	background-image: url('images/page_excel.png');
+	opacity: 1;
 }
 
-.icon-xlsx {
+.icon-xlsx,
+.oo-ui-icon-xlsx {
 	/*@embed*/
 	background-image: url('images/page_white_excel.png');
+	opacity: 1;
+}
+
+.export-button {
+	opacity: 1;
+}
+
+.export-button .oo-ui-iconElement-icon {
+	background-size: auto;
 }
