--- a/resources/bluespice.exportTables.less
+++ b/resources/bluespice.exportTables.less
@@ -1,25 +1,25 @@
 #mw-content-text table.bs-et-highlight {
-	background-color: #FFFFA3 !important;
+	background-color: #ffffa3 !important;
 }
 
 .icon-csv,
 .oo-ui-icon-csv {
-	/*@embed*/
-	background-image: url('images/table.png');
+	/* @embed */
+	background-image: url( images/table.png );
 	opacity: 1;
 }
 
 .icon-xls,
 .oo-ui-icon-xls {
-	/*@embed*/
-	background-image: url('images/page_excel.png');
+	/* @embed */
+	background-image: url( images/page_excel.png );
 	opacity: 1;
 }
 
 .icon-xlsx,
 .oo-ui-icon-xlsx {
-	/*@embed*/
-	background-image: url('images/page_white_excel.png');
+	/* @embed */
+	background-image: url( images/page_white_excel.png );
 	opacity: 1;
 }
 
